# layer-simulation

./: .gitignore  CMakeLists.txt  README.md  end-verify.sh  layer_index.txt  requirements.txt  run.py  single.sh  sub-run.sh
slurm/run-all-array/: launcher.sh  slurm.sh  thread.sh  worker.sh
src/: gemm.cu
